# powershell-styleguide

./: mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml
docs/: index.md
docs/01-foundations/01.01-general-principles/: README.md
docs/01-foundations/01.02-file-structure/: README.md
docs/01-foundations/01.03-naming-conventions/: README.md
docs/01-foundations/01.04-formatting/: README.md
docs/02-authoring/02.01-functions/: README.md
docs/02-authoring/02.02-modules/: README.md
docs/02-authoring/02.03-documentation/: README.md
docs/02-authoring/02.04-versioning/: README.md
docs/03-runtime/03.01-error-handling/: README.md
docs/03-runtime/03.02-logging/: README.md
docs/03-runtime/03.03-scripting-best-practices/: README.md
docs/03-runtime/03.04-security/: README.md
docs/03-runtime/03.05-performance/: README.md
docs/04-supporting/04.01-testing/: README.md
docs/04-supporting/04.02-project-structure/: README.md
docs/04-supporting/04.03-diagrams/: README.md
docs/04-supporting/04.04-good-vs-bad/: README.md
docs/authoring/: azure-cli-usage.md  documentation.md  functions.md  modules.md  versioning.md
docs/foundations/: file-structure.md  formatting.md  general-principles.md  naming-conventions.md
docs/references/: external-resources.md
docs/runtime/: best-practices.md  error-handling.md  logging.md  performance.md  security.md
docs/supporting/: diagrams.md  good-vs-bad.md  project-structure.md  testing.md
