[project]
name = "powershell-styleguide"
version = "0.1.0"
description = ""
authors = [
    {name = "Peter Kuiper",email = "peter@2force.nl"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.7.0,<10.0.0)",
    "mkdocs-material-extensions (>=1.3.1,<2.0.0)",
    "pymdown-extensions (>=10.17.1,<11.0.0)",
    "mkdocs-glightbox (>=0.5.2,<0.6.0)",
    "mkdocs-mermaid2-plugin (>=1.2.3,<2.0.0)",
    "markdown-katex (>=202406.1035,<202407.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
